Closed
Bug 1821223
Opened 2 years ago
Closed 2 years ago
[CTW] Poor performance querying paragraph boundaries in large tables
Categories
(Core :: Disability Access APIs, defect)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
112 Branch
| Tracking | Status | |
|---|---|---|
| firefox112 | --- | fixed |
People
(Reporter: Jamie, Assigned: Jamie)
References
(Blocks 1 open bug)
Details
(Whiteboard: [ctw-m6])
Attachments
(1 file)
STR (with the NVDA screen reader):
- Ensure NVDA mouse tracking is enabled and that the mouse tracking text unit resolution is set to paragraph. These are default NVDA settings.
- Open this test case:
data:text/html,<table id="table" role="table"><tbody id="tbody"></tbody></table><script> html = ""; for (let i = 0; i < 3000; ++i) { html += "<tr><td>blah</td><td>blah</td></tr>"; } tbody.innerHTML = html; </script> - Move the mouse around the table.
- Expected: No hangs.
- Actual: 5+ second hangs.
This occurs because we don't treat table rows or cells as paragraph boundaries, so we end up walking the whole table with Pivot. That is made worse by bug 1768396. Nevertheless, we should be treating rows at least as paragraph boundaries, probably cells too.
| Assignee | ||
Comment 1•2 years ago
|
||
Table rows and cells are now treated as paragraph boundaries.
Whether a cell should be a paragraph boundary is debatable, but currently, a cell is treated as a line boundary, so this is consistent; a line shouldn't expand beyond a paragraph.
Pushed by jteh@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/fa9e3a8b41a0
TextLeafPoint: Don't treat an entire table as a paragraph. r=eeejay
Comment 3•2 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 2 years ago
status-firefox112:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 112 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•